[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "honeygain-auto-daily-claim"
version = "1.0.0"
description = "Honeygain auto daily claim notifier that posts rich embeds to Discord"
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
  "requests",
  "python-dotenv"
]
license = { file = "LICENSE" }
authors = [
  { name = "itsjustnickdev", email = "nick@drops-it.com" }
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3"
]

[project.urls]
Source = "https://github.com/itsjustnickdev/honeygain-auto-daily-claim-JS-and-PY"
"Funding - PayPal" = "https://paypal.me/@ppblackforthosting"
"Funding - BuyMeACoffee" = "https://buymeacoffee.com/itsjustnickdev"
"Funding - Ko-fi" = "https://ko-fi.com/itsjustnickdev"

[tool.setuptools]
license-files = ["LICENSE"]
